# Stock-Analyzer

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  fly.toml  install.sh  market-analyst-api.spec  pyproject.toml  start.sh
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-desktop.yml  ci.yml
api/: analysis.py  cache.py  config.py  event_bus.py  glossary.py  interpreter.py  logging_config.py  main.py  middleware.py  requirements.txt  validation.py
api/db/: models.py  session.py
api/ingestion/: __init__.py  alphavantage.py  base.py  finnhub.py  news.py  reddit.py  yahoo.py
api/routes/: __init__.py  anomalies.py  history.py  market.py  orderbook.py  sentiment.py  snapshot.py  watchlist.py  websocket.py
benchmarks/: bench_endpoints.py  bench_gradient_boosting.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/resources/sidecar/: .gitkeep
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: BracketBuilder.tsx  CandlestickChart.tsx  ChartContextMenu.tsx  Layout.tsx  OrderBook.tsx  OrderPanel.tsx  PositionSidebar.tsx  TabBar.tsx
frontend/src/components/symbol/: AIOverview.tsx  AnalystPanel.tsx  DetailSkeleton.tsx  InsightsPanel.tsx  KeyStats.tsx  NewsPanel.tsx  SignalCards.tsx  TechnicalPanel.tsx  shared.tsx
frontend/src/hooks/: useMagnetic.ts  useScrollReveal.ts  useSpotlight.ts  useTheme.ts  useTilt.ts  useWebSocket.ts
frontend/src/lib/: api.ts  format.ts  indicators.ts
frontend/src/pages/: Anomalies.tsx  Learn.tsx  Overview.tsx  Simulator.tsx  SymbolDetail.tsx  Watchlist.tsx
frontend/src/stores/: simulatorStore.ts  tabStore.ts
ml/: __init__.py  anomaly.py  features.py  gradient_boosting.py  sentiment.py  train_cli.py  trend.py
scripts/: package-linux.sh  package-macos.sh  package-windows.sh  package.sh  run.sh  setup.sh
src/cpp/: analysis.cpp  analysis.h  cache.cpp  cache.h  main.cpp  server.cpp  server.h  subprocess.cpp  subprocess.h  subprocess_pool.cpp  subprocess_pool.h
src/electron/: afterPack.js  afterSign.js  main.js  package-lock.json  package.json
src/electron/build-resources/: installer.nsh
src/frontend/: index.html  learn.html  stock.html
src/frontend/css/: styles.css
src/frontend/js/: app.js  chart_render.js  config.js  learn.js  search.js  stock.js  theme.js
src/java/src/analyzer/: Glossary.java  Interpreter.java
src/python/: data_fetcher.py  data_service.py  news_fetcher.py
tests/: conftest.py  test_benchmarks.py  test_ml_integration.py  test_ml_pipeline.py  test_snapshot_integration.py  test_v1_endpoints.py  test_v2_endpoints.py
